--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Comic Neue';
 }
 
 body {
