--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,700&display=swap');
+@import './header.scss';
+@import './homePage.scss';
+@import './buttons.scss';
+@import './register.scss';
 
 * {
     margin: 0;
@@ -9,5 +13,6 @@
 
 body {
     height: 100vh;
+    width: 100vw;
     background: linear-gradient(to top, #4ca1af, #c4e0e5)
 }
