--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,39 +1,19 @@
-
 header {
     padding: 20px 50px;
     font-size: 1.5em;
     color: chocolate;
-    position: relative;
+    border-bottom: 1px solid chocolate;
+    display: flex;
+    justify-content: space-between;
 }
 
 header svg {
-    position: absolute;
     color: rgb(176, 30, 30);
     font-size: 2.5em;
+    margin-right: -12px;
 }
 
-header h1 {
-    position: relative;
-    left: 55px;
-    top: 35px;
+header a h1 {
     font-size: 1em;
-    
-}
-
-header a {
-    text-decoration: none;
-    position: absolute;
-    right: 80px;
-    top: 40px;
-    background: chocolate;
-    border-radius: 30px;
-    display: flex;
-    padding: 10px 20px;
-    font-size: 0.6em;
-    color: white;
-    border: none;
-    transition: .3s;
-    &:hover {
-        scale: 1.05;
-    }
+    color: chocolate;
 }
