--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,700&display=swap');
 @import './header.scss';
-@import './homePage.scss';
+@import './welcomePage.scss';
 @import './buttons.scss';
 @import './register.scss';
+@import './mainPage.scss';
 
 * {
     margin: 0;
