--- a/src/sass/buttons.scss
+++ b/src/sass/buttons.scss
@@ -19,7 +19,7 @@ header a:last-of-type {
     }
 }
 
-.home a {
+.home a, .quizContainer a {
     background: chocolate;
     border-radius: 30px;
     font-size: 1em;
