makaronas, atrodo veikia

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -6,6 +6,8 @@
 @import './mainPage.scss';
 @import './errorPage.scss';
 @import './quizPage.scss';
+@import './createQuizForm.scss';
+
 
 * {
     margin: 0;
