--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -18,6 +18,7 @@
 
 body {
     min-height: 100vh;
-    width: 100vw;
-    background: linear-gradient(to top, #4ca1af, #c4e0e5)
+    max-width: 100vw;
+    background: linear-gradient(to top, #4ca1af, #c4e0e5);
+    padding-bottom: 5px;
 }
