--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -6,7 +6,7 @@
 @import './mainPage.scss';
 @import './errorPage.scss';
 @import './quizPage.scss';
-@import './createQuizForm.scss';
+@import './quizForm.scss';
 
 
 * {
