--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -11,11 +11,12 @@ header {
         gap: 8px;
     }
 }
-
-header svg {
-    color: rgb(176, 30, 30);
+header img {
+    width: 70px;
+    color: red;
     font-size: 2.5em;
-    margin-right: -12px;
+    margin-right: -40px;
+
 }
 
 header a h1 {
