--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -16,7 +16,7 @@
     font-family: 'Comic Neue';
 }
 
-body {
+#root {
     min-height: 100vh;
     max-width: 100vw;
     background: linear-gradient(to top, #4ca1af, #c4e0e5);
