--- a/src/sass/quizForm.scss
+++ b/src/sass/quizForm.scss
@@ -5,9 +5,18 @@
     margin-top: 100px;
     border-radius: 10px;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     text-align: center;
+    gap: 20px;
+    transition: .3s;
+
+    .hidden {
+        opacity: 0;
+    }
+    .visible {
+        animation: fadeIn .4s ease-in-out;
+    }
 
     h1 {
         color: chocolate;   
@@ -24,7 +33,7 @@
 
     label {
         position: relative;
-        min-width: 60%;
+        width: 80%;
         margin: auto;
         
         svg {
@@ -48,3 +57,14 @@
     }
 
 }
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px); // Optional: You can add other transformations for effect
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
