--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -4,22 +4,26 @@
     margin: 40px auto;
     padding: 45px;
     border-radius: 15px;
+    h1 {
+        text-align: center;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+        width: fit-content;
+        gap: 15px;
+        
+        input {
+            width: 250px;
+            padding: 5px;
+            margin: 5px 0;
+            border-radius: 4px;
+            border: 1px solid lightgray;
+            outline: none;
+        }
+    }
 }
 
-.newUser form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-    width: fit-content;
-    gap: 15px;
-}
-
-.newUser form input {
-    width: 250px;
-    padding: 5px;
-    margin: 5px 0;
-    border-radius: 4px;
-    border: 1px solid lightgray;
-    outline: none;
-}
